force-app/main/default/objects/Workout__c/fields/Fitness_Level__c.field-meta.xml
<CustomField>
    <fullName>Fitness_Level__c</fullName>
    <label>Fitness Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>