force-app/main/default/objects/Workout__c/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <label>Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Back Squat</fullName>
            </value>
            <value>
                <fullName>Deadlift</fullName>
            </value>
            <value>
                <fullName>Bench Press</fullName>
            </value>
            <value>
                <fullName>Shoulder Press</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>