force-app/main/default/objects/Workout__c/fields/Workout_Description__c.field-meta.xml
<CustomField>
    <fullName>Workout_Description__c</fullName>
    <label>Workout Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>